WSS-605 - Ensure the ws-security-dom can work with the saaj impl in latest Java9 EA kit  - Thanks to Freeman Fang for the patch